# Wallet-ledger-assesment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: 01-ledger-and-no-balance-column.md  02-money-value-object.md  03-double-entry-invariant.md  04-two-phase-transfers.md  05-idempotency.md  06-concurrency-and-locking.md  07-performance-snapshots-and-cache.md  08-deposits-webhooks-providers.md  09-fx-cross-currency.md  10-ddd-events-tracing.md
migrations/versions/: ccfcc54b7bd1_initial_schema_accounts_transactions_.py  d77fa78d62b0_add_metadata_column_to_ledger_entries.py
scripts/: benchmark_balance.py
tests/: conftest.py  test_aggregates.py  test_api.py  test_deposits.py  test_fx.py  test_health.py  test_ledger.py  test_money.py  test_payment_providers.py  test_reversals.py  test_transfers.py
wallet_ledger/: __init__.py  config.py  extensions.py  seeds.py
wallet_ledger/api/: accounts.py  deposits.py  docs.py  errors.py  fx.py  health.py  openapi.py  schemas.py  serializers.py  transactions.py  transfers.py  webhooks.py
wallet_ledger/application/: accounts.py  balance_query.py  deposits.py  fx.py  ledger.py  notifications.py  reversals.py  risk.py  transfers.py
wallet_ledger/domain/: aggregates.py  enums.py  errors.py  events.py  money.py
wallet_ledger/infrastructure/: cache.py  fx_rates.py  idempotency.py  logging.py  notifications.py  tracing.py
wallet_ledger/infrastructure/payments/: __init__.py  base.py  pawapay_provider.py  paypal_provider.py  stripe_provider.py
wallet_ledger/models/: __init__.py  account.py  balance_snapshot.py  base.py  idempotency.py  ledger_entry.py  notification.py  transaction.py
