[project]
name = "wallet-ledger"
version = "0.1.0"
description = "Moteur de grand livre en partie double pour portefeuille multi-devises"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "redis==5.2.1",
    "marshmallow==3.23.2",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
# Migrations générées par Alembic : code outillé, on ne le soumet pas à nos règles.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    # B008 : appel dans une valeur par défaut (ex. Decimal("...")), intentionnel et lisible.
    "B008",
    # E501 : la longueur de ligne du code est gérée par `ruff format` ; on ne veut pas
    # casser artificiellement des docstrings/commentaires métier en français.
    "E501",
]

[tool.setuptools.packages.find]
include = ["wallet_ledger*"]
